--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>ir.snapp</groupId>
-	<artifactId>SnappGithubIntegration</artifactId>
+	<groupId>ir.kit</groupId>
+	<artifactId>KitGithubIntegration</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SnappGithubIntegration</name>
-	<description>An application to integrate snapp user and github account</description>
+	<name>KitGithubIntegration</name>
+	<description>An application to integrate kit user and github account</description>
 
 
 	<repositories>
@@ -51,7 +51,7 @@
 		<springfox.version>3.0.0</springfox.version>
 		<properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
 		<junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
-		<junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
+		<junit.itReportFolder>${project.testresult.directory}/phonebookTest</junit.itReportFolder>
 	</properties>
 
 
@@ -113,8 +113,12 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>1.50.5</version>
+		</dependency>
+		<dependency>
+			<groupId>cz.jirutka.spring</groupId>
+			<artifactId>embedmongo-spring</artifactId>
 			<version>RELEASE</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.cache</groupId>
@@ -144,6 +148,7 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
 			<version>${mapstruct.version}</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -222,6 +227,12 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -246,7 +257,7 @@
 							<image>adoptopenjdk:8-jre-hotspot</image>
 						</from>
 						<to>
-							<image>snappgithubintegration:latest</image>
+							<image>kitgithubphonebook:latest</image>
 						</to>
 						<container>
 							<entrypoint>
