--- a/src/main/docker/prometheus/prometheus.yml
+++ b/src/main/docker/prometheus/prometheus.yml
@@ -6,7 +6,7 @@ global:
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-    monitor: 'Snapp'
+    monitor: 'Kit'
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
