--- a/src/main/resources/swagger/api.yml
+++ b/src/main/resources/swagger/api.yml
@@ -2,7 +2,7 @@
 # This file will be used at compile time to generate Spring-MVC endpoint stubs using openapi-generator
 openapi: '3.0.1'
 info:
-  title: 'SnappGithubIntegration'
+  title: 'KitGithubIntegration'
   version: 1.0.0
 servers:
   - url: http://localhost:8080/api
